added new files

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,8 +5,8 @@ body{
     background-color: darkorange;
 }
 .thesecondfounderofkfc{
-    background-color: chartreuse;
+    background-color: gold;
 }
 .howmanybranchestheyhaveinkenya{
-    background-color: crimson;
+    background-color: chartreuse;
 }
